--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <span class="name">Sydney Su</span>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="resume.html"><span style="color: #f8bc0a;">Resume</span></a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="research.html">Research</a></li>
