--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <embed src="Sydney_Su_CV.pdf#toolbar=0" width="1863" height="1250">
+    <embed src="media\Sydney_Su_CV.pdf#toolbar=0" width="1863" height="1250">
     
 
 </body>
