--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,14 @@
         </div>
     </nav>
     
-    <button type="button">TritonWayfinder</button>
-    <button type="button">Image Classification</button>
-    <button type="button">Recommender System</button>
-    <button type="button">Breast Cancer Classification</button>
+    <div class="buttons-container">
+        <button type="button">TritonWayfinder</button>
+        <button type="button">Image Classification</button>
+        <button type="button">Recommender System</button>
+        <button type="button">Breast Cancer Classification</button>
+    </div>
+
+    
 
 </body>
 
