updated buttons, research, and alignment

--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -25,13 +26,21 @@
         </div>
     </nav>
     
-    <div class="buttons-container">
-        <button type="button">TritonWayfinder</button>
-        <button type="button">Image Classification</button>
-        <button type="button">Recommender System</button>
-        <button type="button">Breast Cancer Classification</button>
-    </div>
 
+    <div class="buttons-container">
+        <button type="button" onclick="window.open('https://github.com/sydney-su/BookNexus', '_blank')">
+            BookNexus
+        </button>
+        <button type="button" onclick="window.open('https://github.com/sydney-su/Breast-Cancer-Classification', '_blank')">
+            Breast Cancer Classification
+        </button>
+        <button type="button" onclick="window.open('https://github.com/sydney-su/License-Plate-Recognition', '_blank')">
+            License Plate Recognition
+        </button>
+        <button type="button" onclick="window.open('https://github.com/sydney-su/TritonWayfinder', '_blank')">
+            TritonWayfinder
+        </button>
+    </div>
     
 
 </body>
