--- a/research.html
+++ b/research.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -25,12 +26,7 @@
         </div>
     </nav>
     
-    <div class="buttons-container">
-        <button type="button">TritonWayfinder</button>
-        <button type="button">Image Classification</button>
-        <button type="button">Recommender System</button>
-        <button type="button">Breast Cancer Classification</button>
-    </div>
+    <h4>I am currently doing LLM research with Algoverse! Updates coming soon...</h3>
 
 </body>
 
