--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -25,7 +26,10 @@
         </div>
     </nav>
 
-    <embed src="Sydney_Su_CV.pdf#toolbar=0" width="1863" height="1250">
+    <div class="resume-container">
+        <embed src="Sydney_Su_CV.pdf#toolbar=0" width="800" height="1050">
+    </div>
+    
     
 
 </body>
