added pop up boring resume and trying to fix mobile view

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Sydney Su - Home</title> <!-- the content here will only show in the tab and in the metadata about the page -->
     <link rel="icon" href="media\compass.png">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -27,7 +26,11 @@
     </nav>
 
     
-    <h4>Hi, I'm Sydney! I am a junior at UCSD majoring in Computer Science.</h3>
+    <h4>Hi, I'm Sydney!<br>
+        I’m passionate about Machine Learning, Data Analysis, and Software Engineering.<br>
+        I am committed to serving my community by leveraging technology to solve meaningful problems.<br>
+        Whether through professional work or personal projects, I'm always eager to learn, build, and collaborate.<br>
+        Outside of tech, you’ll find me cooking, running, playing volleyball, or goofing around with my dog :)</h4>
     
 </body>
 
