updated resume, projects

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,9 @@
         <button type="button" onclick="window.open('https://github.com/sydney-su/License-Plate-Recognition', '_blank')">
             License Plate Recognition
         </button>
+        <button type="button" onclick="window.open('https://github.com/sydney-su/Neural-Network', '_blank')">
+            Neural Network
+        </button>
         <button type="button" onclick="window.open('https://github.com/sydney-su/TritonWayfinder', '_blank')">
             TritonWayfinder
         </button>
