updated research, topics for updated resume

--- a/research.html
+++ b/research.html
@@ -25,7 +25,10 @@
         </div>
     </nav>
     
-    <h4>I am currently doing LLM research with Algoverse! Updates coming soon...</h3>
+    <h4>I am currently doing machine learning research with Algoverse! <br>
+        Did some work with finetuning LLMs to TikZ code with GROP and RL techniques to be able to solve challenging problems with diagrams <br>
+        Doing some work with diffusion models for face privacy protection <br>
+        More updates coming soon...</h4>
 
 </body>
 
