--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <h4>my cool resume coming soon...</h4>
+    <h4>my cool resume (aka colors, pictures, more in-depth descriptions) coming soon...</h4>
     
     
 
