new project for spring break??!!

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,9 @@
         <button type="button" onclick="window.open('https://github.com/sydney-su/TritonWayfinder', '_blank')">
             TritonWayfinder
         </button>
+        <button type="button" onclick="window.open('https://github.com/sydney-su/TritonCourseBot', '_blank')">
+            TritonCourseBot
+        </button>
     </div>
     
 
