--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 
     <!-- Button to Open Modal -->
     <div class="resume-container">
-        <span class="flex_text">view my "boring" resume here:</span>
+        <span class="flex_text">view my professional resume here:</span>
         <button class="open-button" onclick="openModal()">click me</button>
     </div>
     
