--- a/resume.html
+++ b/resume.html
@@ -132,7 +132,7 @@
                             <img src="images/rivian_vw_group_logo.jpeg" alt="Rivian Logo" class="w-12 h-12 rounded-lg object-cover">
                             <div>
                                 <h3 class="text-lg font-bold text-white">Software Engineer Intern</h3>
-                                <p class="font-semibold text-emerald-500">Rivian & Volkswagen Group Technologies</p>
+                                <p class="font-semibold text-emerald-500">Rivian & Volkswagen Group Technologies - Palo Alto, CA</p>
                                 <p class="text-sm text-gray-400">June 2025 - Present</p>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                             <img src="images/algoverse_logo.png" alt="Algoverse AI Logo" class="w-12 h-12 rounded-lg object-cover">
                             <div>
                                 <h3 class="text-lg font-bold text-white">Machine Learning Researcher</h3>
-                                <p class="font-semibold text-emerald-500">Algoverse AI</p>
+                                <p class="font-semibold text-emerald-500">Algoverse AI - Remote</p>
                                 <p class="text-sm text-gray-400">Jan 2025 - July 2025</p>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                             <img src="images/western_digital_logo.jpeg" alt="Western Digital Logo" class="w-12 h-12 rounded-lg object-cover">
                             <div>
                                 <h3 class="text-lg font-bold text-white">Data Engineer Intern</h3>
-                                <p class="font-semibold text-emerald-500">Western Digital</p>
+                                <p class="font-semibold text-emerald-500">Western Digital - San Jose, CA</p>
                                 <p class="text-sm text-gray-400">May 2024 - Jan 2025</p>
                             </div>
                         </div>
